--- a/3 formularze/index.html
+++ b/3 formularze/index.html
@@ -5,8 +5,19 @@
     <title>Document</title>
 </head>
 <body>
-   <form action="">
-   <input type="submit"value="Wyślij"/>
+  <form action="form.php" method="POST">
+      <input type="text" name="imie" />
+      <input type="email" name="mail" />
+      <input type="checkbox" name="agreement">
+      <input type="radio" name="gender">Mężczyzna
+      <label for="gender"></label><br/>
+      <input type="radio" name="gender">Kobieta
+      <input type="submit" value="Wyślij"/>
+  </form>
+  
+  
+
+
     
 </body>
 </html>
