dodano projekt do poprawki

--- a/projekt-do-poprawy/index.html
+++ b/projekt-do-poprawy/index.html
@@ -11,37 +11,38 @@
 <body>
 
 
-  <div id="menu">
-    <div class="menu-item"><a href="#">Home</a></div>
-    <div class="menu-item"><a href="#about">O mnie</a></div>
+  <nav id="menu">
+   <ul>
+    <li class="menu-item"><a href="#">Home</a></li>
+    <li class="menu-item"><a href="#about">O mnie</a></li>
     <div class="menu-item"><a href="#contact">Kontakt</a></div>
-  </div>
+  </ul>
 
 
-  <div id="header">
+  <nav id="header">
     <img src="img/header-background.jpg" alt="Zdjęcie nagłówkowe">
     <div id="main-header-text">Moja własna strona</div>
-  </div>
+  </nav>
 
-  <div id="about">
-    <div id="about-header">O mnie</div>
-    <div class="about-content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</div>
-    <br />
+  <section id="about">
+    <li id="about-header">O mnie</li>
+    < class="about-content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</
+    <section />
 
-    <div class="about-content"> Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe.</div>
+    <li class="about-content"> Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe.</li>
 
-  </div>
+  </>
 
 
-  <div id="contact">
-    <div id="contact-header">Kontakt</div>
+  <footer id="contact">
+    <li id="contact-header">Kontakt<li>
     <div id="contact-content">
-      Łukasz Badocha<br /> 
-      ul. Mostowa 6/13<br /> 
-      31-061 Kraków<br />
-      <a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
+      Monika Rychter<br /> 
+      ul. Stefanii Sempołowskiej 3/104<br /> 
+      31-061 Warszawa<br />
+      <a href="mailto:mgrychter@gmail.com">mgrychter@gmail.com</a>
     </div>
-  </div>
+  </footer>
 
 </body>
 
