--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>1-formularz</title>
+    <title>Document</title>
 </head>
 
 <body>
-   <form>
-    <form action="">
-        <form action="form.php">
-            <label for="Imie">Imie</label>
-            <input type="text">
-            <label for="Nazwisko">Nazwisko</label>
-            <input type="text">
-            <label for="wybór miasta">wybór miasta</label>
-            <input for="text">
+    <form action="https://formspree.io/mgrychter@gmail.com" method="POSTE">
+
+
+        <label for="name">Imie:</label>
+        <input type="text">
+        <br>
+        <label for="lastname">Nazwisko:</label>
+        <input type="text">
+        <br>
+        <label for="wybór miasta">Wybór miasta:</label>
+
+        <br>
 
 
 
 
-            <select name="" id="">
+        <select name="" id="">
 
-                <option value="Kraków">Kraków</option>
-
-
-
-                <option value="Warszawa">Warszawa</option>
-                <option value="Gdańsk">Gdańsk</option>
+            <option value="kraków">Kraków:</option>
 
 
-            </select>
-            <label for="Kobieta">Kobieta</label>
-            <input type="radio">
-            <label for="Mężczyzna">Mężczyzna</label>
-            <input type="radio">
-            <label for="mail">mail</label>
-            <input type="text">
-            <label for="telefon">Telefon</label>
-            <input type="text">
-            <label for="agreement">agreement</label>
-            <input type="checkbox" name="agreement">
 
-            <label for="Wiadomość">Wiadomość</label>
-            <textarea maxlength="1000" name="Wiadomość"></textarea>
-            <input type="submit" value="Wyślij">
-            <a href="mgrychter@gmail.com" Wyślij maila do...></a>
+            <option value="warszawa">Warszawa:</option>
+            <option value="gdańsk">Gdańsk:</option>
 
-        </form>
+
+        </select>
+        <br>
+        <label for="kobieta">Kobieta:</label>
+        <input type="radio">
+        <br>
+        <label for="mężczyzna">Mężczyzna:</label>
+        <input type="radio">
+        <br>
+        <label for="mail">E-mail:</label>
+        <input type="text">
+        <br>
+        <label for="telefon">Telefon:</label>
+        <input type="text">
+        <br>
+        <label for="agreement">agreement:</label>
+        <input type="checkbox" name="agreement">
+        <br>
+
+        <label for="Wiadomość">Wiadomość:</label>
+        <textarea maxlength="1000" name="Wiadomość"></textarea>
+        <input type="submit" value="Wyślij">
+
+
+    </form>
+
 
 
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
