dodano formularz-html5-2

--- a/1-formularz-html5/2-formularz-html5/index.html
+++ b/1-formularz-html5/2-formularz-html5/index.html
@@ -37,10 +37,10 @@
         </select>
         <br>
         <label for="kobieta">Kobieta:</label>
-        <input type="radio" name="gender" id="">
+        <input type="radio" name="kobieta" id="">
         <br>
         <label for="mężczyzna">Mężczyzna:</label>
-        <input type="radio" name="gender" id="">
+        <input type="radio" name="mężczyzna" id="">
         <br>
         <label for="mail">E-mail:</label>
         <input type="text" name="mail" id="">
